--- a/reformat_genome_append_mito.ipynb
+++ b/reformat_genome_append_mito.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSV0Zav8W0F4k8/plN473P",
+      "authorship_tag": "ABX9TyOD3NNExlHcodti48DVQYAO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1063,7 +1063,7 @@
         "from Bio import Entrez, SeqIO\n",
         "\n",
         "# Set your NCBI email (required for Entrez)\n",
-        "Entrez.email = 'nicholas.leigh@med.lu.se'\n",
+        "Entrez.email = ####'ADDYOUREMAIL@HERE'####\n",
         "\n",
         "# Mitochondrial genome accession number\n",
         "MT_ACCESSION = \"NC_005797.1\"\n",
